# VRCMeow

./: .gitignore  README.md  VRCMeow.spec  audio_recorder.py  config.example.yaml  config.py  config_loader.py  gui.py  gui_config.py  gui_dashboard.py  gui_log.py  gui_presets.py  gui_utils.py  llm_client.py  logger_config.py  main.py  osc_client.py  output_dispatcher.py  prompt_presets.py  prompt_presets.yaml  pyproject.toml  stt_gummy.py  stt_paraformer.py
.github/workflows/: release.yml
